--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
-EMAIL_USE_TLS = True
-EMAIL_HOST = 'smtp.gmail.com'
-EMAIL_PORT = 587
-EMAIL_HOST_USER = 'jacksonikonya@gmail.com'
-EMAIL_HOST_PASSWORD = 'Chanukahfashion20'
+export DB_NAME='instagram'
+export DB_USER='jack'
+export DB_PASSWORD='jack'
+export SECRET_KEY='7$cm5)zhn+4@acc@k92nq%@4j@j@5=j4=0z224vg$klrl&pq0m'
+export CLOUD_NAME='dydhwkfmj'
+export API_KEY='581448316934495'
+export API_SECRET='p8APZXIkxEI5RT6s99uHO3ypgZw'
+
+
+
+
+
+
+ 
