--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ export DB_NAME='instagram'
 export DB_USER='jack'
 export DB_PASSWORD='jack'
 export SECRET_KEY='7$cm5)zhn+4@acc@k92nq%@4j@j@5=j4=0z224vg$klrl&pq0m'
-export CLOUD_NAME='dydhwkfmj'
-export API_KEY='581448316934495'
-export API_SECRET='p8APZXIkxEI5RT6s99uHO3ypgZw'
+export CLOUDINARY_CLOUD_NAME='dydhwkfmj'
+export CLOUDINAY_API_KEY='581448316934495'
+export CLOUDINARY_API_SECRET='p8APZXIkxEI5RT6s99uHO3ypgZw'
 
 
 
