--- a/.env
+++ b/.env
@@ -5,7 +5,10 @@ export SECRET_KEY='7$cm5)zhn+4@acc@k92nq%@4j@j@5=j4=0z224vg$klrl&pq0m'
 export CLOUDINARY_CLOUD_NAME='dydhwkfmj'
 export CLOUDINAY_API_KEY='581448316934495'
 export CLOUDINARY_API_SECRET='p8APZXIkxEI5RT6s99uHO3ypgZw'
-
+DEBUG=True
+MODE='dev'
+DISABLE_COLLECTSTATIC=1
+ALLOWED_HOSTS='instapicts.herokuapp.com'
 
 
 
