--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,9 @@ django-bootstrap4 = "*"
 psycopg2-binary = "*"
 cloudinary = "*"
 django-registration = "*"
+gunicorn = "*"
+django-heroku = "*"
+whitenoise = "*"
 
 [dev-packages]
 
