--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ export CLOUDINARY_API_SECRET='p8APZXIkxEI5RT6s99uHO3ypgZw'
 DEBUG=True
 MODE='dev'
 DISABLE_COLLECTSTATIC=1
-ALLOWED_HOSTS='instapicts.herokuapp.com'
+ALLOWED_HOSTS='.localhost','.herokuapp.com','.127.0.0.1'
 
 
 
