--- a/.env
+++ b/.env
@@ -5,13 +5,12 @@ export SECRET_KEY='7$cm5)zhn+4@acc@k92nq%@4j@j@5=j4=0z224vg$klrl&pq0m'
 export CLOUDINARY_CLOUD_NAME='dydhwkfmj'
 export CLOUDINAY_API_KEY='581448316934495'
 export CLOUDINARY_API_SECRET='p8APZXIkxEI5RT6s99uHO3ypgZw'
-DEBUG=True
-MODE='dev'
-DISABLE_COLLECTSTATIC=1
-ALLOWED_HOSTS='.localhost','.herokuapp.com','.127.0.0.1'
+export DEBUG=True
+export MODE='dev'
+export DISABLE_COLLECTSTATIC=1
+export ALLOWED_HOSTS='.localhost','.herokuapp.com','127.0.0.1','0.0.0.0'
 
 
 
 
 
- 
